음원 좌표 표시 해주기 완료 음원 드래그 기능 완료

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,5 +14,7 @@
     <!--format-->
     <string name="textAngleFormat">angle : %.1f</string>
     <string name="textDistanceFormat">distance : %.1f</string>
+    <string name="textXcorFormat">X : %.2f</string>
+    <string name="textYcorFormat">Y : %.1f</string>
 
 </resources>
