원 궤도는 추가 SO 뷰 위에 그리지 않도록 수정 필요 누락 이미지 추가

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Multimedia-system-project-3d-sound-simulator</string>
+    <string name="app_name">삼3소리</string>
 
     <!--button text-->
     <string name="moveCounterClockWiseButtonText">ccw turn</string>
